  which returns a union of an objects declared namespaces with those of its
  parents, and pruneInheritedNamespaces, which removes an objects namespaces 
  if they are also declared by its parents.

- Added "strict" parameter to GDataQuery.

- Made changes to support 64-bit builds on Leopard.

- Added service support for Google AuthSub tokens.

- Added a convenience routine for setting an entry's batch ID from a string.

- Added YouTube "most_popular" feed ID, and query parameters for location
  and language restriction.
  
- Moved array category method objectsWithValue:forKeyPath: to GDataUtilities

- Added property methods to GDataHTTPFetcher.  These are convenient alternatives
  to storing an NSDictionary in the userData.
  
- Added support for OpenSearch 1.1 elements in feeds.

- Added deleteEntry methods to service classes, and changed deleteResorceURL
  methods to require an ETag.
  
- Replaced Obj-C categories on NSArray (such as -editLink) with methods of
  GDataObject classes to reduce the number of utility category names in
  global namespace.
  
- Added more document type entry classes, and added more upload document types
  to docs sample application.  Added folder document support to DocList APIs.
  
- Added -setShouldUploadDataOnly setting to entry base class, allowing clients 
  to upload media data to servers without the XML of the GDataObject.


Bugs fixed

- Moved common attribute and element text parsing to GDataObject base class,
  substantially reducing code in many classes derived from GDataObject.

- Improved namespaced attribute support in GDataObject.

- Improved parsing performance.

- Fixed two ivar leaks in GDataServiceBase

- GDataObject request generation refactored into its own routine in 
  GDataServiceBase, allowing for authenticated non-XML requests.

- No longer testing isPrimary in isEqual method in email, postal address, 
  organization, IM, and phone elements.

- Fixed typo in YouTube sample which passed password as client ID 